Bug 107722 - [CI][DRMTIP] igt@kms_* - dmesg-warn - mismatch in pixel_rate (expected 297000, found 594000)
Summary: [CI][DRMTIP] igt@kms_* - dmesg-warn - mismatch in pixel_rate (expected 297000...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: high normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-28 14:18 UTC by Martin Peres
Modified: 2018-09-07 15:35 UTC (History)
1 user (show)

See Also:
i915 platform: ICL
i915 features: display/HDMI


Attachments

Description Martin Peres 2018-08-28 14:18:07 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_93/fi-icl-u/igt@kms_hdmi_inject@inject-4k.html

[  153.872053] [drm:pipe_config_err [i915]] *ERROR* mismatch in pixel_rate (expected 297000, found 594000)
[  153.872407] [drm:pipe_config_err [i915]] *ERROR* mismatch in base.adjusted_mode.crtc_clock (expected 297000, found 594000)
[  153.872718] [drm:pipe_config_err [i915]] *ERROR* mismatch in port_clock (expected 297000, found 594000)
[  153.872814] ------------[ cut here ]------------
[  153.872819] pipe state doesn't match!
[  153.872951] WARNING: CPU: 6 PID: 1593 at drivers/gpu/drm/i915/intel_display.c:11874 intel_atomic_commit_tail+0xca1/0xd00 [i915]
[  153.872965] Modules linked in: snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic i915 ax88179_178a usbnet mii x86_pkg_temp_thermal snd_hda_intel coretemp snd_hda_codec crct10dif_pclmul crc32_pclmul snd_hwdep ghash_clmulni_intel snd_hda_core e1000e snd_pcm prime_numbers
[  153.873074] CPU: 6 PID: 1593 Comm: kms_hdmi_inject Tainted: G     U  W         4.18.0-rc6-g3389cdd19fe3-drmtip_93+ #1
[  153.873080] Hardware name: Intel Corporation Ice Lake Client Platform/IceLake U DDR4 SODIMM PD RVP, BIOS ICLSFWR1.R00.2222.A01.1805300339 05/30/2018
[  153.873170] RIP: 0010:intel_atomic_commit_tail+0xca1/0xd00 [i915]
[  153.873178] Code: 69 f8 ff ff e8 50 07 c2 d7 0f 0b 0f b6 44 24 18 e9 2a f8 ff ff e8 3f 07 c2 d7 0f 0b 0f b6 14 24 e9 7e fd ff ff e8 2f 07 c2 d7 <0f> 0b e9 c1 f8 ff ff e8 23 07 c2 d7 0f 0b 49 8b 46 50 e9 ec fd ff 
[  153.873500] RSP: 0018:ffffa74f80727af8 EFLAGS: 00010282
[  153.873511] RAX: 0000000000000000 RBX: 0000000000000000 RCX: 0000000000000001
[  153.873518] RDX: 0000000080000001 RSI: ffffffff99085706 RDI: 00000000ffffffff
[  153.873524] RBP: ffff892a956008d8 R08: 0000000029bd22f7 R09: 0000000000000000
[  153.873530] R10: ffff892a9dd072f8 R11: 0000000000000000 R12: ffff892aa4c75d28
[  153.873539] R13: ffff892a9dd06fc8 R14: ffff892a9dd02548 R15: ffff892a95600000
[  153.873546] FS:  00007fe518111980(0000) GS:ffff892ac0980000(0000) knlGS:0000000000000000
[  153.873553] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[  153.873559] CR2: 00007f88b8cc9600 CR3: 00000004960fa004 CR4: 0000000000760ee0
[  153.873565] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
[  153.873574] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
[  153.873579] PKRU: 55555554
[  153.873584] Call Trace:
[  153.873696]  intel_atomic_commit+0x240/0x320 [i915]
[  153.873718]  drm_atomic_helper_set_config+0x7b/0x90
[  153.873734]  drm_mode_setcrtc+0x44d/0x660
[  153.873786]  ? drm_mode_getcrtc+0x180/0x180
[  153.873798]  drm_ioctl_kernel+0x7c/0xf0
[  153.873816]  drm_ioctl+0x2e6/0x3a0
[  153.873833]  ? drm_mode_getcrtc+0x180/0x180
[  153.873873]  do_vfs_ioctl+0xa0/0x6d0
[  153.873887]  ? lock_acquire+0xa6/0x210
[  153.873910]  ksys_ioctl+0x35/0x60
[  153.873926]  __x64_sys_ioctl+0x11/0x20
[  153.873938]  do_syscall_64+0x55/0x190
[  153.873951]  entry_SYSCALL_64_after_hwframe+0x49/0xbe
[  153.873959] RIP: 0033:0x7fe5177c65d7
[  153.873964] Code: b3 66 90 48 8b 05 b1 48 2d 00 64 c7 00 26 00 00 00 48 c7 c0 ff ff ff ff c3 66 2e 0f 1f 84 00 00 00 00 00 b8 10 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 81 48 2d 00 f7 d8 64 89 01 48 
[  153.874296] RSP: 002b:00007ffdcd9f8fe8 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
[  153.874307] RAX: ffffffffffffffda RBX: 00007ffdcd9f9020 RCX: 00007fe5177c65d7
[  153.874314] RDX: 00007ffdcd9f9020 RSI: 00000000c06864a2 RDI: 0000000000000003
[  153.874320] RBP: 00007ffdcd9f9020 R08: 0000000000000000 R09: 00005641d95de610
[  153.874327] R10: 00005641d95e1d94 R11: 0000000000000246 R12: 00000000c06864a2
[  153.874334] R13: 0000000000000003 R14: 0000000000000000 R15: 0000000000000000
[  153.874368] irq event stamp: 115594
[  153.874379] hardirqs last  enabled at (115593): [<ffffffff980fc99c>] console_unlock+0x3fc/0x600
[  153.874388] hardirqs last disabled at (115594): [<ffffffff98a0111c>] error_entry+0x7c/0x100
[  153.874399] softirqs last  enabled at (115566): [<ffffffff98c0034f>] __do_softirq+0x34f/0x505
[  153.874412] softirqs last disabled at (115545): [<ffffffff980905a5>] irq_exit+0xa5/0xc0
[  153.874499] WARNING: CPU: 6 PID: 1593 at drivers/gpu/drm/i915/intel_display.c:11874 intel_atomic_commit_tail+0xca1/0xd00 [i915]
[  153.874507] ---[ end trace 2bfa03b539883b03 ]---
Comment 1 Martin Peres 2018-08-28 15:12:36 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_95/fi-icl-u/igt@kms_hdmi_inject@inject-audio.html

[   98.213401] [drm:pipe_config_err [i915]] *ERROR* mismatch in pixel_rate (expected 148500, found 297000)
[   98.213715] [drm:pipe_config_err [i915]] *ERROR* mismatch in base.adjusted_mode.crtc_clock (expected 148500, found 297000)
[   98.213893] [drm:pipe_config_err [i915]] *ERROR* mismatch in port_clock (expected 148500, found 297000)
[   98.213973] ------------[ cut here ]------------
[   98.213978] pipe state doesn't match!
[   98.214113] WARNING: CPU: 5 PID: 1262 at drivers/gpu/drm/i915/intel_display.c:11874 intel_atomic_commit_tail+0xca1/0xd00 [i915]
[   98.214119] Modules linked in: vgem snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic i915 ax88179_178a usbnet x86_pkg_temp_thermal mii snd_hda_intel coretemp snd_hda_codec crct10dif_pclmul snd_hwdep crc32_pclmul ghash_clmulni_intel e1000e snd_hda_core snd_pcm prime_numbers
[   98.214234] CPU: 5 PID: 1262 Comm: kms_hdmi_inject Tainted: G     U  W         4.18.0-g9cd882754c10-drmtip_95+ #1
[   98.214241] Hardware name: Intel Corporation Ice Lake Client Platform/IceLake U DDR4 SODIMM PD RVP, BIOS ICLSFWR1.R00.2222.A01.1805300339 05/30/2018
[   98.214338] RIP: 0010:intel_atomic_commit_tail+0xca1/0xd00 [i915]
[   98.214343] Code: 69 f8 ff ff e8 e0 ce d0 c5 0f 0b 0f b6 44 24 18 e9 2a f8 ff ff e8 cf ce d0 c5 0f 0b 0f b6 14 24 e9 7e fd ff ff e8 bf ce d0 c5 <0f> 0b e9 c1 f8 ff ff e8 b3 ce d0 c5 0f 0b 49 8b 46 50 e9 ec fd ff 
[   98.214658] RSP: 0018:ffffa081806afaf8 EFLAGS: 00010282
[   98.214669] RAX: 0000000000000000 RBX: 0000000000000000 RCX: 0000000000000001
[   98.214676] RDX: 0000000080000001 RSI: ffffffff87085a3e RDI: 00000000ffffffff
[   98.214682] RBP: ffff9b0a541b08d8 R08: 000000006e938b92 R09: 0000000000000000
[   98.214688] R10: ffff9b0a571a31c8 R11: 0000000000000000 R12: ffff9b0a538b37e8
[   98.214693] R13: ffff9b0a571a2e98 R14: ffff9b0a673d37e8 R15: ffff9b0a541b0000
[   98.214701] FS:  00007f329d5b1980(0000) GS:ffff9b0a80940000(0000) knlGS:0000000000000000
[   98.214708] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[   98.214714] CR2: 000055e8d62e42a4 CR3: 00000004953ac004 CR4: 0000000000760ee0
[   98.214720] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
[   98.214726] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
[   98.214731] PKRU: 55555554
[   98.214736] Call Trace:
[   98.214851]  intel_atomic_commit+0x240/0x320 [i915]
[   98.214872]  drm_atomic_helper_set_config+0x7b/0x90
[   98.214888]  drm_mode_setcrtc+0x44d/0x660
[   98.214938]  ? drm_mode_getcrtc+0x180/0x180
[   98.214949]  drm_ioctl_kernel+0x7c/0xf0
[   98.214966]  drm_ioctl+0x2e6/0x3a0
[   98.214981]  ? drm_mode_getcrtc+0x180/0x180
[   98.215019]  do_vfs_ioctl+0xa0/0x6d0
[   98.215029]  ? lock_acquire+0xa6/0x210
[   98.215052]  ksys_ioctl+0x35/0x60
[   98.215067]  __x64_sys_ioctl+0x11/0x20
[   98.215076]  do_syscall_64+0x55/0x190
[   98.215089]  entry_SYSCALL_64_after_hwframe+0x49/0xbe
[   98.215097] RIP: 0033:0x7f329cc665d7
[   98.215102] Code: b3 66 90 48 8b 05 b1 48 2d 00 64 c7 00 26 00 00 00 48 c7 c0 ff ff ff ff c3 66 2e 0f 1f 84 00 00 00 00 00 b8 10 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 81 48 2d 00 f7 d8 64 89 01 48 
[   98.215414] RSP: 002b:00007fff05061468 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
[   98.215426] RAX: ffffffffffffffda RBX: 00007fff050614a0 RCX: 00007f329cc665d7
[   98.215432] RDX: 00007fff050614a0 RSI: 00000000c06864a2 RDI: 0000000000000003
[   98.215438] RBP: 00007fff050614a0 R08: 0000000000000000 R09: 00005585013b7a70
[   98.215444] R10: 00005585013b7ad0 R11: 0000000000000246 R12: 00000000c06864a2
[   98.215450] R13: 0000000000000003 R14: 0000000000000000 R15: 0000000000000000
[   98.215479] irq event stamp: 65072
[   98.215489] hardirqs last  enabled at (65071): [<ffffffff860fca7c>] console_unlock+0x3fc/0x600
[   98.215498] hardirqs last disabled at (65072): [<ffffffff86a0111c>] error_entry+0x7c/0xf0
[   98.215507] softirqs last  enabled at (64942): [<ffffffff86c0034f>] __do_softirq+0x34f/0x505
[   98.215518] softirqs last disabled at (64933): [<ffffffff86090625>] irq_exit+0xa5/0xc0
[   98.215610] WARNING: CPU: 5 PID: 1262 at drivers/gpu/drm/i915/intel_display.c:11874 intel_atomic_commit_tail+0xca1/0xd00 [i915]
[   98.215616] ---[ end trace c6da06bc16e43519 ]---
Comment 2 Jani Saarinen 2018-08-28 17:08:17 UTC
ref: https://patchwork.freedesktop.org/series/48805/
Comment 3 Martin Peres 2018-08-31 10:26:23 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/drmtip_96/fi-icl-u/igt@kms_3d.html

[  181.235050] [drm:pipe_config_err [i915]] *ERROR* mismatch in pixel_rate (expected 74250, found 148500)
[  181.235418] [drm:pipe_config_err [i915]] *ERROR* mismatch in base.adjusted_mode.crtc_clock (expected 74250, found 148500)
[  181.235605] [drm:pipe_config_err [i915]] *ERROR* mismatch in port_clock (expected 74250, found 148500)
[  181.235801] ------------[ cut here ]------------
[  181.235808] pipe state doesn't match!
[  181.235978] WARNING: CPU: 5 PID: 1407 at drivers/gpu/drm/i915/intel_display.c:11877 intel_atomic_commit_tail+0xca1/0xd00 [i915]
[  181.235995] Modules linked in: vgem snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic i915 snd_hda_intel snd_hda_codec x86_pkg_temp_thermal ax88179_178a snd_hwdep usbnet coretemp mii snd_hda_core crct10dif_pclmul crc32_pclmul ghash_clmulni_intel snd_pcm e1000e prime_numbers
[  181.236159] CPU: 5 PID: 1407 Comm: kms_3d Tainted: G     U  W         4.19.0-rc1-g3c17d3c5703e-drmtip_96+ #1
[  181.236169] Hardware name: Intel Corporation Ice Lake Client Platform/IceLake U DDR4 SODIMM PD RVP, BIOS ICLSFWR1.R00.2313.A01.1808012121 08/01/2018
[  181.236266] RIP: 0010:intel_atomic_commit_tail+0xca1/0xd00 [i915]
[  181.236277] Code: 69 f8 ff ff e8 70 2c b5 c7 0f 0b 0f b6 44 24 18 e9 2a f8 ff ff e8 5f 2c b5 c7 0f 0b 0f b6 14 24 e9 7e fd ff ff e8 4f 2c b5 c7 <0f> 0b e9 c1 f8 ff ff e8 43 2c b5 c7 0f 0b 49 8b 46 50 e9 ec fd ff
[  181.236287] RSP: 0018:ffffb6d1406cbaf8 EFLAGS: 00010282
[  181.236297] RAX: 0000000000000000 RBX: 0000000000000000 RCX: 0000000000000001
[  181.236303] RDX: 0000000080000001 RSI: ffffffff890f765a RDI: 00000000ffffffff
[  181.236309] RBP: ffff93b75e4c08d8 R08: 00000000685b3ef5 R09: 0000000000000000
[  181.236314] R10: ffff93b75e57f2f8 R11: 0000000000000000 R12: ffff93b7648f0008
[  181.236320] R13: ffff93b75e57efc8 R14: ffff93b75e2a4a88 R15: ffff93b75e4c0000
[  181.236327] FS:  00007fbb41b19980(0000) GS:ffff93b770740000(0000) knlGS:0000000000000000
[  181.236334] CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
[  181.236340] CR2: 00007fbb416e1a58 CR3: 00000004a205a001 CR4: 0000000000760ee0
[  181.236348] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
[  181.236353] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
[  181.236358] PKRU: 55555554
[  181.236363] Call Trace:
[  181.236479]  intel_atomic_commit+0x240/0x320 [i915]
[  181.236499]  drm_atomic_helper_set_config+0x7b/0x90
[  181.236513]  drm_mode_setcrtc+0x44d/0x660
[  181.236564]  ? drm_mode_getcrtc+0x180/0x180
[  181.236574]  drm_ioctl_kernel+0x7c/0xf0
[  181.236590]  drm_ioctl+0x2e6/0x3a0
[  181.236604]  ? drm_mode_getcrtc+0x180/0x180
[  181.236637]  ? rcu_lockdep_current_cpu_online+0x8f/0xd0
[  181.236659]  do_vfs_ioctl+0xa0/0x6d0
[  181.236672]  ? vm_munmap+0x67/0x90
[  181.236687]  ? do_munmap+0x2f9/0x3f0
[  181.236709]  ksys_ioctl+0x35/0x60
[  181.236727]  __x64_sys_ioctl+0x11/0x20
[  181.236737]  do_syscall_64+0x55/0x190
[  181.236751]  entry_SYSCALL_64_after_hwframe+0x49/0xbe
[  181.236760] RIP: 0033:0x7fbb411cd5d7
[  181.236769] Code: b3 66 90 48 8b 05 b1 48 2d 00 64 c7 00 26 00 00 00 48 c7 c0 ff ff ff ff c3 66 2e 0f 1f 84 00 00 00 00 00 b8 10 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d 81 48 2d 00 f7 d8 64 89 01 48
[  181.236776] RSP: 002b:00007ffd26327898 EFLAGS: 00000246 ORIG_RAX: 0000000000000010
[  181.236790] RAX: ffffffffffffffda RBX: 00007ffd263278d0 RCX: 00007fbb411cd5d7
[  181.236797] RDX: 00007ffd263278d0 RSI: 00000000c06864a2 RDI: 0000000000000003
[  181.236803] RBP: 00007ffd263278d0 R08: 0000000000000000 R09: 000055a752ab3fb0
[  181.236810] R10: 000055a752ab4e18 R11: 0000000000000246 R12: 00000000c06864a2
[  181.236817] R13: 0000000000000003 R14: 0000000000000000 R15: 0000000000000000
[  181.236851] irq event stamp: 84498
[  181.236864] hardirqs last  enabled at (84497): [<ffffffff880fbb46>] console_unlock+0x1b6/0x5e0
[  181.236874] hardirqs last disabled at (84498): [<ffffffff88001910>] trace_hardirqs_off_thunk+0x1a/0x1c
[  181.236884] softirqs last  enabled at (84478): [<ffffffff88c0031d>] __do_softirq+0x31d/0x483
[  181.236896] softirqs last disabled at (84457): [<ffffffff88090099>] irq_exit+0xa9/0xc0
[  181.237009] WARNING: CPU: 5 PID: 1407 at drivers/gpu/drm/i915/intel_display.c:11877 intel_atomic_commit_tail+0xca1/0xd00 [i915]
[  181.237018] ---[ end trace a6284dc23ffef614 ]---
Comment 4 Ville Syrjala 2018-09-04 13:27:26 UTC
Should be fixed by

commit 9f9d594d952abad06f31ed65f29855f3b99a3c17
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Mon Sep 3 17:28:41 2018 +0300

    drm/i915: Fix ICL+ HDMI clock readout
Comment 5 Martin Peres 2018-09-07 15:35:20 UTC
(In reply to Ville Syrjala from comment #4)
> Should be fixed by
> 
> commit 9f9d594d952abad06f31ed65f29855f3b99a3c17
> Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
> Date:   Mon Sep 3 17:28:41 2018 +0300
> 
>     drm/i915: Fix ICL+ HDMI clock readout

Indeed, thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.